✌️🌗 Updated with Glitch

--- a/min/index.html
+++ b/min/index.html
@@ -5,9 +5,9 @@
       width="1280"
       height="648"
       style="border:1px solid;background:#5C94FC;cursor:crosshair"
-      id="a"
-    ></canvas
-    ><img
+      id="a">
+    </canvas
+      ><img
       src="https://cdn.glitch.com/1604302f-f8a7-4ab0-8a0f-fc1bb7573fc4%2FMittzmario2-1.png?v=1575593437230" hidden
       id="b"
     /><br />
