--- a/min/index.html
+++ b/min/index.html
@@ -12,27 +12,14 @@
       id="b"
     /><br />
     <p style="color:#444;font:normal 15px arial">
-      A Platformer Game by Orago -
+      A Platformer remake of Mario -
       <a
         href="#"
-        onclick="location='https://mittens.glitch.me"
+        onclick="location='https://mittenscat.herokuapp.com"
         style="color:#444;font:normal 15px arial"
-        >More Games</a
+        >Homepage</a
       >
-      -
-      <a
-        href="#"
-        onclick="location='https://mittzchat.glitch.me'"
-        style="color:#444;font:normal 15px arial"
-        >Chat Room</a
-      >
-      -
-      <a
-        href="#"
-        onclick="location='/'"
-        style="color:#444;font:normal 15px arial"
-        >Nothing</a
-      ><script>
+      <script>
         c = a.getContext("2d");
         localStorage["scpm"] = localStorage["scpm"] || 1;
         d = 0;
@@ -1186,8 +1173,6 @@
                      // "I made a level for #SuperChronoPortalMaker !\nPlay the game here: http://js13kgames.com/entries/super-chrono-portal-maker. \nPlay my level here: " +
                         
                         encodeURI(
-                          location.origin +
-                            location.pathname +
                             "#" +
                             JSON.stringify({ hash: t.hash, I: t.I, J: t.J })
                         )
